--- a/work.html
+++ b/work.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="mbr-box__magnet mbr-box__magnet--top-left mbr-section__right col-sm-4">
                     <div class="mbr-section__container">
-                        <div class="mbr-buttons mbr-buttons--auto-align mbr-buttons--top mbr-buttons--left"><a class="mbr-buttons__btn btn btn-lg btn-default" href="indexnederlands.html">Return to the homepage</a></div>
+                        <div class="mbr-buttons mbr-buttons--auto-align mbr-buttons--top mbr-buttons--left"><a class="mbr-buttons__btn btn btn-lg btn-default" href="indexenglish.html">Return to the homepage</a></div>
                     </div>
                 </div>
             </div>
