--- a/work.html
+++ b/work.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/images/dsc-0086-3872x2592-10.jpg" type="image/x-icon">
   <meta name="description" content="">
-  <title>Emiel Caus - WERK</title>
+  <title>Emiel Caus - WORK</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:700,400&amp;subset=cyrillic,latin,greek,vietnamese">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/mobirise/css/style.css">
